@@ -1,10 +1,11 @@
 Changes in Release 2.5.4
 =============================================
-[JOST-191] - Further Bugfixes to XACML\policy
-[JOST-190] - Backport some bugfixes from OpenSAML3
 [JOST-185] - Defaultbootstrap does not initialize the providers from the WS-Trust and WS-Policy schemas in openws
 [JOST-187] - Velocity initialization code uses an invalid key for the configuration properties set
 [JOST-188] - DefaultBootstrap is unnecessarily calling Velocity singleton initialization
+[JOST-190] - Backport some bugfixes from OpenSAML3
+[JOST-191] - Further Bugfixes to XACML\policy
+[JOST-193] - Make the implementation of custom bootstrap code easier, without relying on private data from DefaultBootstrap
 
 Changes in Release 2.5.3
 =============================================
